Refactor : PROBLEM5 리팩토링